--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Swoosh">
+        <activity android:name=".SkillActivity"></activity>
         <activity android:name=".LeagueActivity" />
         <activity android:name=".BaseActivity" />
         <activity android:name=".WelcomeActivity">
